--- a/GrubHub/Frontend/package.json
+++ b/GrubHub/Frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "array-move": "^2.2.0",
     "axios": "^0.18.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
@@ -10,6 +11,7 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
+    "jquery-ui-bundle": "^1.12.1-migrate",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
@@ -25,11 +27,13 @@
     "react-cookies": "^0.1.0",
     "react-dnd": "^9.4.0",
     "react-dom": "^16.8.0",
+    "react-drag-sortable": "^1.0.6",
     "react-images-upload": "^1.2.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "react-sortable": "^2.0.0",
+    "react-sortable-hoc": "^1.10.1",
     "react-sortable-list": "^1.1.1",
     "react-split-pane": "^0.1.87",
     "react-splitter-layout": "^4.0.0",
