--- a/GrubHub/Frontend/package.json
+++ b/GrubHub/Frontend/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^16.8.0",
     "react-drag-sortable": "^1.0.6",
     "react-images-upload": "^1.2.7",
+    "react-redux": "^7.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
@@ -37,7 +38,10 @@
     "react-sortable-list": "^1.1.1",
     "react-split-pane": "^0.1.87",
     "react-splitter-layout": "^4.0.0",
-    "react-test-renderer": "^16.10.2"
+    "react-test-renderer": "^16.10.2",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
